task5/tests/group/output/test15.out
lli: <stdin>:39:11: error: '%t3' defined with type 'i8' but expected 'i32'
store i32 %t3, i32* %x
          ^
